--- a/app/static/gf.css
+++ b/app/static/gf.css
@@ -36,3 +36,12 @@ div.card.plain {
 div.card.plain>div.card-header {
 	background-color: inherit;
 }
+
+div#filtering button {
+	background-color: #efa83d;	
+	color: #000000;
+}
+
+.btn:focus{
+    outline: none;
+}
