--- a/app/static/gf.css
+++ b/app/static/gf.css
@@ -42,6 +42,14 @@ div#filtering button {
 	color: #000000;
 }
 
+div#filtering label {
+	font-weight: bold;
+}
+
+div.filter_controls {
+	padding-bottom: 1em;
+}
+
 .btn:focus{
     outline: none;
 }
