Add login form (not functional)

--- a/app/static/gf.css
+++ b/app/static/gf.css
@@ -50,6 +50,10 @@ div.filter_controls {
 	padding-bottom: 1em;
 }
 
-.btn:focus{
+.btn:focus {
     outline: none;
+}
+
+form#login input.form-control {
+	margin-bottom: 1em;
 }
