--- a/app/static/gf.css
+++ b/app/static/gf.css
@@ -8,6 +8,10 @@ nav {
 	border-radius: 5px;
 }
 
+a.link_no_underline:hover {
+    text-decoration: none;
+}
+
 ul.navbar-nav {
 	margin-left:1em;
 }
@@ -98,4 +102,5 @@ mark {
 
 div#map {
 	height: 400px;
+	margin: 20px;
 }
