--- a/app/static/gf.css
+++ b/app/static/gf.css
@@ -67,14 +67,6 @@ h1.inline-heading, h2.inline-heading, h3.inline-heading, h4.inline-heading {
     outline: none;
 }
 
-form input.form-control, form textarea.form-control {
-	margin-bottom: 1em;
-}
-
-.input-group .form-control {
-	margin-bottom: 1em;	
-}
-
 form button {
 	margin-bottom: 1em;
 }
@@ -119,6 +111,13 @@ a#open_map_link{
 
 .print-only {
 	display:none;
+}
+
+div.university_detail {
+	border: 1px solid rgba(0,0,0,0.125);
+	border-radius: 5px;
+	padding: 10px;
+	margin: 10px;
 }
 
 @media print {
