--- a/app/static/gf.css
+++ b/app/static/gf.css
@@ -128,6 +128,10 @@ div.university_detail .form-control {
 	margin-bottom: 0;	
 }
 
+span.quote {
+	font-style: oblique;
+}
+
 @media print {
 	.print-only {
 		display:unset;
